force-app/main/default/objects/Bug_Occurrence__c/Bug_Occurrence__c.object-meta.xml
<CustomObject>
    <label>Bug Occurrence</label>
    <nameField>
        <displayFormat>BOC-{0000}</displayFormat>
        <label>Bug Occure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bug Occurrences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>