force-app/main/default/objects/Bug_Occurrence__c/fields/Affected_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Affected_Record_ID__c</fullName>
    <label>Affected Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>