force-app/main/default/objects/Bug_Occurrence__c/fields/Bug__c.field-meta.xml
<CustomField>
    <fullName>Bug__c</fullName>
    <label>Bug</label>
    <referenceTo>Bug__c</referenceTo>
    <relationshipLabel>Bug Occurrences</relationshipLabel>
    <relationshipName>Bug_Occurrences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>