force-app/main/default/objects/Bug_Occurrence__c/fields/Link_to_Record__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Record__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Id, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Record</label>
    <type>Text</type>
</CustomField>