force-app/main/default/objects/Bug_Occurrence__c/fields/Occurence_Date__c.field-meta.xml
<CustomField>
    <fullName>Occurence_Date__c</fullName>
    <label>Occurence Date</label>
    <type>DateTime</type>
</CustomField>