force-app/main/default/objects/Bug_Occurrence__c/fields/Occurence_Status__c.field-meta.xml
<CustomField>
    <fullName>Occurence_Status__c</fullName>
    <label>Occurence Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Manually Fixed</fullName>
            </value>
            <value>
                <fullName>No Action Required</fullName>
            </value>
            <value>
                <fullName>Pending Root Cause Resolution</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>