force-app/main/default/objects/Bug_Occurrence__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reported By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bug_Occurrences</relationshipName>
    <type>Lookup</type>
</CustomField>